--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root {
-      --bg: #faf8f7;
-      --card-bg: #ffffff;
-      --text-main: #111111;
-      --text-subtle: #6b6b6b;
-      --accent: #1e6f63;
-      --track: #e3dedb;
-      --border: #e0d9d5;
+      --bg: #ffffff;
+      --card-bg: #f9f6f0;
+      --text-main: #333232;
+      --text-subtle: #333232;
+      --accent: #eb8672;
+      --track: #cdb35e;
+      --border: #333232;
       --radius-lg: 16px;
       --shadow-soft: 0 10px 30px rgba(0, 0, 0, 0.04);
       --font-main: system-ui, -apple-system, BlinkMacSystemFont, "SF Pro Text",
@@ -88,13 +88,13 @@
       border: 1px solid #ddd0c9;
       padding: 4px 10px;
       font-size: 0.75rem;
-      background: #f6f0ea;
-      color: #6a5749;
+      background: #e66f9f;
+      color: #f9f6f0;
       cursor: pointer;
     }
 
     .reset-btn:hover {
-      background: #f1e5db;
+      background: #eb8672;
     }
 
     .sliders {
@@ -111,8 +111,8 @@
       gap: 14px;
       padding: 9px 12px;
       border-radius: 999px;
-      background: #faf7f4;
-      border: 1px solid #efe6df;
+      background: #f9f6f0;
+      border: 1px solid #333232;
     }
 
     .trait {
@@ -192,7 +192,7 @@
     .tick {
       width: 1px;
       height: 5px;
-      background: #d6cec7;
+      background: #333232;
       opacity: 0.8;
     }
 
