--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       --text-main: #333232;
       --text-subtle: #333232;
       --accent: #eb8672;
-      --track: #cdb35e;
-      --border: #333232;
+      --track: #efc6d8;
+      --border: #cdb35e;
       --radius-lg: 16px;
       --shadow-soft: 0 10px 30px rgba(0, 0, 0, 0.04);
       --font-main: system-ui, -apple-system, BlinkMacSystemFont, "SF Pro Text",
