--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     .reset-btn {
       border-radius: 999px;
-      border: 1px solid #ddd0c9;
+      border: 1px solid #333232;
       padding: 4px 10px;
       font-size: 0.75rem;
       background: #e66f9f;
@@ -112,7 +112,7 @@
       padding: 9px 12px;
       border-radius: 999px;
       background: #f9f6f0;
-      border: 1px solid #333232;
+      border: 1px solid #cdb35e;
     }
 
     .trait {
